[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Title_Scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu_Scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Parallax1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Quit_Scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GAME_START.gd" type="Script" id=5]

[node name="GAME_START" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Parallax1" parent="." instance=ExtResource( 3 )]

[node name="Title_Scene" parent="." instance=ExtResource( 1 )]

[node name="Menu_Scene" parent="." instance=ExtResource( 2 )]

[node name="Quit_Scene" parent="." instance=ExtResource( 4 )]

[connection signal="visibility_changed" from="Quit_Scene" to="." method="_on_Quit_Scene_visibility_changed"]
